[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ner-chunk-stitch-pipeline"
version = "0.1.0"
description = "NER pipeline for long texts using word-based chunking and stitching"
authors = [
    { name="John-John", email="you@example.com" }
]
dependencies = [
    "transformers>=4.20.0",
    "simpletransformers>=0.63.9",
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "scikit-learn>=0.24.2",
    "torch>=1.9.0"
]
requires-python = ">=3.8"
